FIX: Replaced logo, fixed spacing in search button, footer links, and disclaimer info.

--- a/src/styles/atoms/FooterLinks.module.scss
+++ b/src/styles/atoms/FooterLinks.module.scss
@@ -17,6 +17,7 @@
     & ul {
         font-weight: bold;
         font-size: 18px;
+        padding: 0;
     }
 }
 
